<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="nanodegree.mani.com.myappportfolio.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt_heading"
        android:id="@+id/textView"
        android:textColor="@android:color/holo_red_dark"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_pop_movies_txt"
        android:id="@+id/button"
        android:onClick="openApp"
        android:background="@android:color/holo_blue_light"
        android:layout_below="@+id/textView"
        android:layout_marginTop="5dp"
        android:layout_alignStart="@+id/button2"
        android:layout_alignEnd="@+id/button2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_stockhawk_txt"
        android:id="@+id/button2"
        android:onClick="openApp"
        android:layout_marginTop="5dp"
        android:background="@android:color/holo_blue_light"
        android:layout_below="@+id/button"
        android:layout_alignEnd="@+id/button3"
        android:layout_alignStart="@+id/button3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_build_txt"
        android:id="@+id/button3"
        android:onClick="openApp"
        android:layout_marginTop="5dp"
        android:background="@android:color/holo_blue_light"
        android:layout_below="@+id/button2"
        android:layout_alignStart="@+id/button4"
        android:layout_alignEnd="@+id/button4" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_material_txt"
        android:id="@+id/button4"
        android:onClick="openApp"
        android:layout_marginTop="5dp"
        android:background="@android:color/holo_blue_light"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
         />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_ubiquituos_txt"
        android:id="@+id/button5"
        android:onClick="openApp"
        android:layout_marginTop="5dp"
        android:background="@android:color/holo_blue_light"
        android:layout_below="@+id/button4"
        android:layout_alignStart="@+id/button4"
        android:layout_alignEnd="@+id/button4" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_capstone_txt"
        android:id="@+id/button6"
        android:onClick="openApp"
        android:layout_marginTop="5dp"
        android:background="@android:color/holo_orange_dark"
        android:layout_below="@+id/button5"
        android:layout_alignEnd="@+id/button5"
        android:layout_alignStart="@+id/button5" />
</RelativeLayout>
